--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-<iframe  src="head.html" scrolling="no" width="100%" height="65px" ></iframe>
+<header id="header" th:replace="head::html"></header>
 
 <div class="main layui-clear">
   <div class="fly-panel" pad20>
