--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,9 +7,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<meta name="keywords" content="">
 	<meta name="description" content="">
-	<link rel="stylesheet" href="res/layui/css/layui.css" th:href="@{layui/css/layui.css}">
-	<link rel="stylesheet" href="res/css/global.css" th:href="@{css/global.css}">
-	<script src="res/layui/layui.js" th:src="@{layui/layui.js}"></script>
+	<!--th:href="@{/layui/css/layui.css}  该路径最前面不加/只替换二级目录 加/替换一级目录-->
+	<link rel="stylesheet" href="static/layui/css/layui.css" th:href="@{/layui/css/layui.css}">
+	<link rel="stylesheet" href="static/css/global.css" th:href="@{/css/global.css}">
+	<script src="static/layui/layui.js" th:src="@{/layui/layui.js}"></script>
 	<style scoped>
 		html,body{
 			position: relative;
@@ -97,14 +98,16 @@
 		.fly-list-li:hover {
 			border-left: 4px solid #393D49;
 		}
-				
+		#m65{
+			margin-top: 65px;
+		}
 	</style>
 </head>
 
 <body>
-<header id="header" th:replace="head::html"></header>
+	<div id="header" th:include="head::html"></div>
 <!--<iframe src="head.html" scrolling="no" width="100%" height="65px"></iframe>-->
-	<div class="main layui-clear">
+	<div class="main layui-clear  " id="m65">
 		<div class="content layui-row" style="margin-right:0">
 			<div class="layui-col-md3">
 				<form action="" class="layui-form">
@@ -130,153 +133,19 @@
 			</div>
 			<div class="wrap">
 				<ul class="fly-list">
-					<li class="fly-list-li">
-						<span class="avatar" style="">胡</span>
+					<!--使用th:each进行遍历-->
+					<li class="fly-list-li" th:each="user:${users}" >
+						<span class="avatar" th:text="${#strings.substring(user.getName(),0,1)}"></span>
 						<h2 class="fly-tip">
-							<a href="detail.html"> 胡立鹏每日总结 </a>
+							<a href="/summary/detail"> [[${user.getName()}]]每日总结 </a>
 						</h2>
 						<p>
 							<span>
-								<a href="">胡力鹏</a>
+								<a href="" th:text="${user.getName()}"></a>
 							</span>
-							<span>30分钟前</span>
+							<span th:text="${user.getNewTime()}"></span>
 							<span class="fly-list-hint">
-								<i class="iconfont" title="评论">&#xe60c;</i> 502
-							</span>
-						</p>
-					</li>
-					<li class="fly-list-li">
-						<span class="avatar" style="">胡</span>
-						<h2 class="fly-tip">
-							<a href="detail.html"> 胡立鹏每日总结 </a>
-						</h2>
-						<p>
-							<span>
-								<a href="">胡力鹏</a>
-							</span>
-							<span>30分钟前</span>
-							<span class="fly-list-hint">
-								<i class="iconfont" title="评论">&#xe60c;</i> 502
-							</span>
-						</p>
-					</li>
-					<li class="fly-list-li">
-						<span class="avatar" style="">胡</span>
-						<h2 class="fly-tip">
-							<a href="detail.html"> 胡立鹏每日总结 </a>
-						</h2>
-						<p>
-							<span>
-								<a href="">胡力鹏</a>
-							</span>
-							<span>30分钟前</span>
-							<span class="fly-list-hint">
-								<i class="iconfont" title="评论">&#xe60c;</i> 502
-							</span>
-						</p>
-					</li>
-					<li class="fly-list-li">
-						<span class="avatar" style="">胡</span>
-						<h2 class="fly-tip">
-							<a href="detail.html"> 胡立鹏每日总结 </a>
-						</h2>
-						<p>
-							<span>
-								<a href="">胡力鹏</a>
-							</span>
-							<span>30分钟前</span>
-							<span class="fly-list-hint">
-								<i class="iconfont" title="评论">&#xe60c;</i> 502
-							</span>
-						</p>
-					</li>
-					<li class="fly-list-li">
-						<span class="avatar" style="">胡</span>
-						<h2 class="fly-tip">
-							<a href="detail.html"> 胡立鹏每日总结 </a>
-						</h2>
-						<p>
-							<span>
-								<a href="">胡力鹏</a>
-							</span>
-							<span>30分钟前</span>
-							<span class="fly-list-hint">
-								<i class="iconfont" title="评论">&#xe60c;</i> 502
-							</span>
-						</p>
-					</li>
-					<li class="fly-list-li">
-						<span class="avatar" style="">胡</span>
-						<h2 class="fly-tip">
-							<a href="detail.html"> 胡立鹏每日总结 </a>
-						</h2>
-						<p>
-							<span>
-								<a href="">胡力鹏</a>
-							</span>
-							<span>30分钟前</span>
-							<span class="fly-list-hint">
-								<i class="iconfont" title="评论">&#xe60c;</i> 502
-							</span>
-						</p>
-					</li>
-					<li class="fly-list-li">
-						<span class="avatar" style="">胡</span>
-						<h2 class="fly-tip">
-							<a href="detail.html"> 胡立鹏每日总结 </a>
-						</h2>
-						<p>
-							<span>
-								<a href="">胡力鹏</a>
-							</span>
-							<span>30分钟前</span>
-							<span class="fly-list-hint">
-								<i class="iconfont" title="评论">&#xe60c;</i> 502
-							</span>
-						</p>
-					</li>
-					<li class="fly-list-li">
-						<span class="avatar" style="">胡</span>
-						<h2 class="fly-tip">
-							<a href="detail.html"> 胡立鹏每日总结 </a>
-						</h2>
-						<p>
-							<span>
-								<a href="">胡力鹏</a>
-							</span>
-							<span>30分钟前</span>
-							<span class="fly-list-hint">
-								<i class="iconfont" title="评论">&#xe60c;</i> 502
-							</span>
-						</p>
-					</li>
-					<li class="fly-list-li">
-						<span class="avatar" style="">胡</span>
-						<h2 class="fly-tip">
-							<a href="detail.html"> 胡立鹏每日总结 </a>
-						</h2>
-						<p>
-							<span>
-								<a href="">胡力鹏</a>
-							</span>
-							<span>30分钟前</span>
-							<span class="fly-list-hint">
-								<i class="iconfont" title="评论">&#xe60c;</i> 502
-							</span>
-						</p>
-					</li>
-					<li class="fly-list-li">
-						<span class="avatar" style="">胡</span>
-						<h2 class="fly-tip">
-							<a href="detail.html"> 胡立鹏每日总结 </a>
-						</h2>
-						<p>
-							<span>
-								<a href="">胡力鹏</a>
-							</span>
-							<span>30分钟前</span>
-							<span class="fly-list-hint">
-								<i class="iconfont" title="评论">&#xe60c;</i> 502
+								<i class="iconfont" title="评论">&#xe60c;</i>[[${user.getCommentCount()}]]
 							</span>
 						</p>
 					</li>
@@ -301,8 +170,7 @@
 		</div>
 		<a href="add.html" class="everyday">每日总结</a>
 	</div>
-	<script color="47,64,86" opacity='0.9' zIndex="-2" count="250" src="./res/js/canvas-nest.js" th:src="@{js/canvas-nest.js}"></script>
-			
-</body>
 
+</body>
+<script color="47,64,86" opacity='0.9' zIndex="-2" count="250" src="./js/canvas-nest.js" th:src="@{/js/canvas-nest.js}"></script>
 </html>
