--- a/src/main/resources/templates/head.html
+++ b/src/main/resources/templates/head.html
@@ -1,26 +1,34 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
+
 
 <head>
 	<meta charset="UTF-8">
 	<title></title>
-	<link rel="stylesheet" href="res/layui/css/layui.css" th:href="@{layui/css/layui.css}">
-	<link rel="stylesheet" href="res/css/global.css" th:href="@{css/global.css}">
-	<script src="res/layui/layui.js" th:src="@{layui/layui.js}"></script>
+	<link rel="stylesheet" href="static/res/layui/css/layui.css" th:href="@{/layui/css/layui.css}">
+	<link rel="stylesheet" href="static/res/css/global.css" th:href="@{/css/global.css}">
+	<script src="static/layui/layui.js" th:src="@{/layui/layui.js}"></script>
+    <script th:src="@{/js/jquery.js}"></script>
 	<style scoped>
 		.header {
 			background-color: #393D49;
 		}
+        .loginend {
+			display: flex;
+			flex-direction: row;
+			justify-content: center;
+			align-items: center;
+		}
+		.avataraa {
+			display: flex;
+			flex-direction: row;
+			justify-content: center;
+			align-items: center;
 
-		.avatar {
-			line-height: 50px;
-			padding-bottom: 5px;
-			box-sizing: border-box;
 		}
 
 		.avatar1 {
-			float: left;
-			display: block;
 			width: 50px;
 			height: 50px;
 			text-align: center;
@@ -31,6 +39,22 @@
 			background-color: #c2c2c2;
 			margin-right:  15px;
 		}
+		.nav-user{
+			height: 100%;
+			display: flex;
+			flex-direction: row;
+			justify-content: flex-start;
+			align-items: flex-start;
+		}
+		.nav{
+			margin-top: 10px;
+		}
+		.logout{
+			border: none;
+			background-color: transparent;
+			color: white;
+			margin-top: -3px;
+		}
 	</style>
 </head>
 
@@ -38,28 +62,37 @@
 
 	<div class="header" >
 		<div class="main">
-			<a class="title" href="index.html" target="_parent">
+			<a class="title" href="/index" target="_parent">
 				<i class="iconfont icon-jiaoliu layui-hide-xs" style="font-size: 22px;"></i>
 				吾日三省吾身</a>
 			<div class="nav">
-				<a class="nav-this" href="index.html">
+				<a class="nav-this" href="/index"></a>
 			</div>
 			<div class="nav-user">
+				<!--登录后-->
+				<div class="loginend" sec:authorize="isAuthenticated()">
+					<a class="avataraa" href="summary/persona" target="_parent">
+                        <span class="avatar"></span>
+						<span style="color: #fff" sec:authentication="name" class="name"></span>
+					</a>
+                    <!--截取姓名的第一个字-->
+                    <script>
+                        var name = $('.name').html().substring(0,1);
 
-				<!-- 登陆后的样子 -->
-				<a class="avatar" href="personal.html" target="_parent">
-					<span class="avatar1">胡</span>
-					<span>胡呼呼</span>
-				</a>
-				<div class="nav">
-					<a href="">
-						<i class="iconfont icon-tuichu" style="top: 0; font-size: 22px;"></i>退出</a>
+                        $('.avatar').html(name)
+                    </script>
+					<form method="post" th:action="@{/logout}" class="nav" >
+						<button class="logout">
+							<i class="iconfont icon-tuichu" style="top: 0; font-size: 22px;"></i>退出</button>
+					</form>
 				</div>
-				<a class="iconfont icon-touxiang layui-hide-xs" style="margin-top: 4px; display: inline-block;">
-				</a>
-				<div class="nav" style="font-size:14px;color: white;margin-top: -5px;margin-left: 1px; " />
-				<a href="login.html" target="_parent">登录</a>
-				<a href="register.html" target="_parent">注册</a>
+
+				<!--登录前-->
+				<div class="nav" sec:authorize="!isAuthenticated()">
+					<a class="iconfont icon-touxiang layui-hide-xs" style="margin-top: 4px; display: inline-block;"></a>
+					<a href="/loginPage" target="_parent">登录</a>
+					<a href="/register" target="_parent">注册</a>
+			 	</div>
 			</div>
 		</div>
 	</div>
