--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+	  xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 
 <head>
 	<meta charset="utf-8">
@@ -9,7 +10,10 @@
 	<meta name="description" content="">
 	<link rel="stylesheet" href="res/layui/css/layui.css" th:href="@{layui/css/layui.css}">
 	<link rel="stylesheet" href="res/css/global.css" th:href="@{css/global.css}">
+	<link rel="stylesheet" th:href="@{/page/page.css}">
 	<script src="res/layui/layui.js" th:src="@{layui/layui.js}"></script>
+	<script  th:src="@{/js/jquery.js}"></script>
+	<script  th:src="@{/page/page.js}"></script>
 	<style scoped>
 		html,body{
 			position: relative;
@@ -133,7 +137,7 @@
 					<li class="fly-list-li">
 						<span class="avatar" style="">胡</span>
 						<h2 class="fly-tip">
-							<a href="detail.html"> 胡立鹏每日总结 </a>
+							<a href="/summary/detail"> 胡立鹏每日总结 </a>
 						</h2>
 						<p>
 							<span>
@@ -299,7 +303,14 @@
 
 			</div>
 		</div>
-		<a href="add.html" class="everyday">每日总结</a>
+		<a href="/summary/add" class="everyday" id="everdaySummary">每日总结</a>
+		<span sec:authentication="name" id="userName" hidden="hidden"></span>
+
+		<!--获取到登录的名字-->
+		<script>
+            var name = $('#userName').html();
+			$('#everdaySummary').attr("href","/summary/add/"+name);
+		</script>
 	</div>
 	<script color="47,64,86" opacity='0.9' zIndex="-2" count="250" src="./res/js/canvas-nest.js" th:src="@{js/canvas-nest.js}"></script>
 			
