--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -30,18 +30,18 @@
 						<ul class="layui-tab-title">
 							<li class="layui-this">登入</li>
 							<li>
-								<a href="register.html">注册</a>
+								<a href="register">注册</a>
 							</li>
 						</ul>
 						<div class="layui-form layui-tab-content" id="LAY_ucm" style="padding: 20px 0;">
 							<div class="layui-tab-item layui-show">
 								<div class="layui-form layui-form-pane">
-									<form method="post">
+									<form method="post" th:action="@{/loginPage}">
 										<div class="layui-form-item"> <label for="L_email" class="layui-form-label">用户名</label>
-											<div class="layui-input-inline"> <input type="text" id="userName" name="userName" required=""  placeholder="请输入用户名" lay-verify="required" autocomplete="off" class="layui-input"> </div>
+											<div class="layui-input-inline"> <input type="text" id="userName" name="username" required=""  placeholder="请输入用户名" lay-verify="required" autocomplete="off" class="layui-input"> </div>
 										</div>
 										<div class="layui-form-item"> <label for="L_pass" class="layui-form-label">密码</label>
-											<div class="layui-input-inline"> <input type="password" id="L_pass" name="pass"  placeholder="请输入密码" required="" lay-verify="required" autocomplete="off" class="layui-input"> </div>
+											<div class="layui-input-inline"> <input type="password" id="L_pass" name="password"  placeholder="请输入密码" required="" lay-verify="required" autocomplete="off" class="layui-input"> </div>
 										</div>
 										<div class="layui-form-item"> <button class="layui-btn" lay-filter="*" lay-submit="">立即登录</button> <span style="padding-left:20px;"> 
 
