个人中心以及，定时查找每日未总结的员工

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,9 +7,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<meta name="keywords" content="">
 	<meta name="description" content="">
-	<link rel="stylesheet" href="res/layui/css/layui.css" th:href="@{layui/css/layui.css}">
-	<link rel="stylesheet" href="res/css/global.css" th:href="@{css/global.css}">
-	<script src="res/layui/layui.js" th:src="@{layui/layui.js}"></script>
+	<link rel="stylesheet" href="res/layui/css/layui.css" th:href="@{/layui/css/layui.css}">
+	<link rel="stylesheet" href="res/css/global.css" th:href="@{/css/global.css}">
+	<script src="res/layui/layui.js" th:src="@{/layui/layui.js}"></script>
 	<style scoped>
 		html,body{
 			position: relative;
@@ -97,14 +97,42 @@
 		.fly-list-li:hover {
 			border-left: 4px solid #393D49;
 		}
+
+		.nosign {
+			width: 150px;
+			height: 100%;
+			position: fixed;
+			left: 0;
+			top: 65px;
+			z-index: 100;
+			padding: 15px;
+			border: 1px solid #2F4056;
+		}
+		.title11{
+			font-size: 15px;
+			background-color: #009688;
+			padding: 5px 15px;
+			color: #ffffff;
+			text-align: center;
+		}
+		.nosign>ul>li{
+			font-size: 14px;
+			padding: 8px 15px;
+			border-bottom: 1px solid #2F4056;
+			border-left: 1px solid #2F4056;
+			border-right: 1px solid #2F4056;
+		}
+		.father{
+			position: relative;
+		}
 				
 	</style>
 </head>
 
 <body>
-<header id="header" th:replace="head::html"></header>
+	<header id="header" th:replace="head::html"></header>
 <!--<iframe src="head.html" scrolling="no" width="100%" height="65px"></iframe>-->
-	<div class="main layui-clear">
+	<div class="main layui-clear" style="margin-top: 65px">
 		<div class="content layui-row" style="margin-right:0">
 			<div class="layui-col-md3">
 				<form action="" class="layui-form">
@@ -300,8 +328,14 @@
 			</div>
 		</div>
 		<a href="add.html" class="everyday">每日总结</a>
+		<div class="nosign">
+			<h3 class="title11"> <span>[[${#dates.format(new java.util.Date().getTime(),'yyyy-MM-dd')}]]</span>未总结</h3>
+			<ul th:each="user : ${nameList}">
+				<li><span class="father" th:text="${user}"></span></li>
+			</ul>
+		</div>
 	</div>
-	<script color="47,64,86" opacity='0.9' zIndex="-2" count="250" src="./res/js/canvas-nest.js" th:src="@{js/canvas-nest.js}"></script>
+	<script color="47,64,86" opacity='0.9' zIndex="-2" count="250" src="./res/js/canvas-nest.js" th:src="@{/js/canvas-nest.js}"></script>
 			
 </body>
 
