--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="keywords" content="">
   <meta name="description" content="">
-  <link rel="stylesheet" href="res/layui/css/layui.css" th:href="@{layui/css/layui.css}">
-  <link rel="stylesheet" href="res/css/global.css" th:href="@{css/global.css}">
-  <script src="res/layui/layui.js" th:src="@{layui/layui.js}"></script>
+  <link rel="stylesheet" href="res/layui/css/layui.css" th:href="@{/layui/css/layui.css}">
+  <link rel="stylesheet" href="res/css/global.css" th:href="@{/css/global.css}">
+  <script src="res/layui/layui.js" th:src="@{/layui/layui.js}"></script>
 </head>
 <body>
 
