--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -7,9 +7,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<meta name="keywords" content="fly,layui,前端社区">
 	<meta name="description" content="">
-	<link rel="stylesheet" href="res/layui/css/layui.css" th:href="@{layui/css/layui.css}">
-	<link rel="stylesheet" href="res/css/global.css" th:href="@{css/global.css}">
-	<script src="res/layui/layui.js" th:src="@{layui/layui.js}"></script>
+	<link rel="stylesheet" href="res/layui/css/layui.css" th:href="@{/layui/css/layui.css}">
+	<link rel="stylesheet" href="res/css/global.css" th:href="@{/css/global.css}">
+	<script src="res/layui/layui.js" th:src="@{/layui/layui.js}"></script>
 	<!--<script src="js/jquery.js" th:src="@{js/jquery.js}"></script>-->
 	<style type="text/css" rel="stylesheet">
 		form {
