--- a/src/main/resources/templates/head.html
+++ b/src/main/resources/templates/head.html
@@ -4,23 +4,28 @@
 <head>
 	<meta charset="UTF-8">
 	<title></title>
-	<link rel="stylesheet" href="res/layui/css/layui.css" th:href="@{layui/css/layui.css}">
-	<link rel="stylesheet" href="res/css/global.css" th:href="@{css/global.css}">
-	<script src="res/layui/layui.js" th:src="@{layui/layui.js}"></script>
+	<link rel="stylesheet" href="static/res/layui/css/layui.css" th:href="@{/layui/css/layui.css}">
+	<link rel="stylesheet" href="static/res/css/global.css" th:href="@{/css/global.css}">
+	<script src="static/layui/layui.js" th:src="@{/layui/layui.js}"></script>
 	<style scoped>
 		.header {
 			background-color: #393D49;
 		}
+        .loginend {
+			display: flex;
+			flex-direction: row;
+			justify-content: center;
+			align-items: center;
+		}
+		.avataraa {
+			display: flex;
+			flex-direction: row;
+			justify-content: center;
+			align-items: center;
 
-		.avatar {
-			line-height: 50px;
-			padding-bottom: 5px;
-			box-sizing: border-box;
 		}
 
 		.avatar1 {
-			float: left;
-			display: block;
 			width: 50px;
 			height: 50px;
 			text-align: center;
@@ -31,35 +36,54 @@
 			background-color: #c2c2c2;
 			margin-right:  15px;
 		}
+		.nav-user{
+			height: 100%;
+			display: flex;
+			flex-direction: row;
+			justify-content: flex-start;
+			align-items: flex-start;
+		}
+		.nav{
+			margin-top: 10px;
+		}
+		.logout{
+			border: none;
+			background-color: transparent;
+			color: white;
+			margin-top: -3px;
+		}
 	</style>
 </head>
 
 <body>
 
-	<div class="header" >
+	<div class="header" th:fragment="copy" >
 		<div class="main">
 			<a class="title" href="index.html" target="_parent">
 				<i class="iconfont icon-jiaoliu layui-hide-xs" style="font-size: 22px;"></i>
 				吾日三省吾身</a>
 			<div class="nav">
-				<a class="nav-this" href="index.html">
+				<a class="nav-this" href="index.html"></a>
 			</div>
 			<div class="nav-user">
-
-				<!-- 登陆后的样子 -->
-				<a class="avatar" href="personal.html" target="_parent">
-					<span class="avatar1">胡</span>
-					<span>胡呼呼</span>
-				</a>
-				<div class="nav">
-					<a href="">
-						<i class="iconfont icon-tuichu" style="top: 0; font-size: 22px;"></i>退出</a>
+				<!--登录后-->
+				<div class="loginend">
+					<a class="avataraa" href="personal.html" th:href="@{'/summary/persona?id='+2+'&currement='+1+'&pageSize='+1}" target="_parent">
+						<span class="avatar1">胡</span>
+						<span style="color: #fff">胡呼呼</span>
+					</a>
+					<form method="post" action="" class="nav" >
+						<button class="logout">
+							<i class="iconfont icon-tuichu" style="top: 0; font-size: 22px;"></i>退出</button>
+					</form>
 				</div>
-				<a class="iconfont icon-touxiang layui-hide-xs" style="margin-top: 4px; display: inline-block;">
-				</a>
-				<div class="nav" style="font-size:14px;color: white;margin-top: -5px;margin-left: 1px; " />
-				<a href="login.html" target="_parent">登录</a>
-				<a href="register.html" target="_parent">注册</a>
+
+				<!--登录前-->
+				<!--<div class="nav">-->
+					<!--<a class="iconfont icon-touxiang layui-hide-xs" style="margin-top: 4px; display: inline-block;"></a>-->
+					<!--<a href="login.html" target="_parent">登录</a>-->
+					<!--<a href="register.html" target="_parent">注册</a>-->
+			 	<!--</div>-->
 			</div>
 		</div>
 	</div>
