--- a/src/main/resources/templates/personal.html
+++ b/src/main/resources/templates/personal.html
@@ -4,9 +4,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>个人中心</title>
-	<link rel="stylesheet" href="res/layui/css/bootstrap.min.css" th:href="@{layui/css/bootstrap.min.css}">
-	<link rel="stylesheet" href="res/layui/css/layui.css" th:href="@{layui/css/layui.css}">
-	<link rel="stylesheet" href="res/css/global.css" th:href="@{css/global.css}">
+	<link rel="stylesheet" href="res/layui/css/bootstrap.min.css" th:href="@{/layui/css/bootstrap.min.css}">
+	<link rel="stylesheet" href="res/layui/css/layui.css" th:href="@{/layui/css/layui.css}">
+	<link rel="stylesheet" href="res/css/global.css" th:href="@{/css/global.css}">
 
 	<style>
 		.list-group-item {
@@ -41,28 +41,22 @@
 
 <body>
 	<header id="header" th:replace="head::html"></header>
-	<!--<iframe src="head.html" scrolling="no" width="100%" height="65px"></iframe>-->
-	<div class='container'>
-		<ul class="list-group">
+	<div class='container' style="margin-top: 65px">
+		<ul class="list-group" th:each="l:${logList}">
 			<li class="list-group-item">
 				<div class="panel panel-success">
 					<div class="panel-heading">
-						<h3>今天我敲了一段代码
-							<small style="margin:0 15px;">2017/7/30</small>
-							<small>浏览量：30</small>
+						<h3 >[[${l.title}]]
+							<span style="margin:0 15px;" th:text="${#dates.format(l.date,'yyyy-MM-dd')}"></span>
+							<span th:text="阅读量+' : '+${l.hot}"></span>
 						</h3>
 					</div>
-					<div class="panel-body">
-						通过在文本输入框
-						<input> 前面、后面或是两边加上文字或按钮，可以实现对表单控件的扩展。为 .input-group 赋予 .input-group-addon 或 .input-group-btn 类，可以给 .form-control 的前面或后面添加额外的元素。通过在文本输入框
-						<input> 前面、后面或是两边加上文字或按钮，可以实现对表单控件的扩展。为 .input-group 赋予 .input-group-addon 或 .input-group-btn 类，可以给 .form-control 的前面或后面添加额外的元素。通过在文本输入框
-						<input> 前面、后面或是两边加上文字或按钮，可以实现对表单控件的扩展。为 .input-group 赋予 .input-group-addon 或 .input-group-btn 类，可以给 .form-control 的前面或后面添加额外的元素。通过在文本输入框
-						<input> 前面、后面或是两边加上文字或按钮，可以实现对表单控件的扩展。为 .input-group 赋予 .input-group-addon 或 .input-group-btn 类，可以给 .form-control 的前面或后面添加额外的元素。通过在文本输入框
-						<input> 前面、后面或是两边加上文字或按钮，可以实现对表单控件的扩展。为 .input-group 赋予 .input-group-addon 或 .input-group-btn 类，可以给 .form-control 的前面或后面添加额外的元素。
+					<div class="panel-body" th:text="${l.log}">
+
 					</div>
 				</div>
 			</li>
-			<li class="list-group-item">
+			<!--<li class="list-group-item">
 				<div class="panel panel-success">
 					<div class="panel-heading">
 						<h3>今天我敲了一段代码
@@ -90,22 +84,57 @@
 						暂无内容
 					</div>
 				</div>
-			</li>
+			</li>-->
 		</ul>
 		<div style="text-align: center">
-			<div class="laypage-main">
-				<span class="laypage-curr">1</span>
-				<a href="">2</a>
-				<a href="">3</a>
-				<a href="">4</a>
-				<a href="">5</a>
-				<span>…</span>
-				<a href="" class="laypage-last" title="尾页">尾页</a>
-				<a href="" class="laypage-next">下一页</a>
-			</div>
+			<!--<nav>
+				<ul class="pagination">
+					&lt;!&ndash;<li><a href="">&laquo;</a></li>&ndash;&gt;
+					<li>
+						<a th:if="${not isFirstPage}" th:href="@{'/summary/persona?id='+2+'&currement='+(${pageBean.getCurrentPage()-1})+'&pageSize='+1}">上一页</a>
+						<a th:if="${isFirstPage}" href="javascript:void(0);">上一页</a>
+					</li>
+
+					<li th:each="pageNo : ${#numbers.sequence(1,pageBean.getTotalPage())}">
+						<a th:if="${pageNum eq pageNo}" href="javascript:void(0);">
+							<span th:text="${pageNo}" class="laypage-curr"></span>
+						</a>
+
+						<a th:if="${not (pageNum eq pageNo)}" th:href="@{'/summary/persona?id='+2+'&currement='+(${pageNo})+'&pageSize='+1}">
+							<span th:text="${pageNo}"></span>
+						</a>
+					</li>
+
+					<li>
+						<a th:if="${not isLastPage}" th:href="@{'/summary/persona?id='+2+'&currement='+(${pageBean.getCurrentPage()+1})+'&pageSize='+1}">下一页</a>
+						<a th:if="${isLastPage}" href="javascript:void(0);">下一页</a>
+					</li>
+					&lt;!&ndash;<li><a href="#">&raquo;</a></li>&ndash;&gt;
+				</ul>
+			</nav>-->
+			<nav>
+				<ul class="pagination">
+					<li>
+						<a th:if="${not isFirstPage}" th:href="@{'/summary/persona?id='+2+'&currement='+(${pageBean.getCurrentPage()-1})+'&pageSize='+1}">上一页</a>
+						<a th:if="${isFirstPage}" href="javascript:void(0);">上一页</a>
+					</li>
+					<!--(${pageBean.getPageSize()})-->
+					<li th:if="${pageNum -3 >=1}" ><a th:href="@{'/summary/persona?id='+2+'&currement='+(${pageBean.getCurrentPage()-3})+'&pageSize='+1}" th:text="${pageNum -3}" >1</a></li>
+					<li th:if="${pageNum -2 >=1}" ><a th:href="@{'/summary/persona?id='+2+'&currement='+(${pageBean.getCurrentPage()-2})+'&pageSize='+1}" th:text="${pageNum  -2}">1</a></li>
+					<li th:if="${pageNum -1 >=1}" ><a th:href="@{'/summary/persona?id='+2+'&currement='+(${pageBean.getCurrentPage()-1})+'&pageSize='+1}" th:text="${pageNum  -1}">1</a></li>
+					<li class="active"><a href="#" th:text="${pageNum}" >1</a></li>
+					<li th:if="${pageNum+1 <=totalPages}" ><a th:href="@{'/summary/persona?id='+2+'&currement='+(${pageBean.getCurrentPage()+1})+'&pageSize='+1}" th:text="${pageNum +1}" >1</a></li>
+					<li th:if="${pageNum+2 <=totalPages}" ><a th:href="@{'/summary/persona?id='+2+'&currement='+(${pageBean.getCurrentPage()+2})+'&pageSize='+1}" th:text="${pageNum +2}">1</a></li>
+					<li th:if="${pageNum+3 <=totalPages}" ><a th:href="@{'/summary/persona?id='+2+'&currement='+(${pageBean.getCurrentPage()+3})+'&pageSize='+1}" th:text="${pageNum +3}">1</a></li>
+
+					<li>
+						<a th:if="${not isLastPage}" th:href="@{'/summary/persona?id='+2+'&currement='+(${pageBean.getCurrentPage()+1})+'&pageSize='+1}">下一页</a>
+						<a th:if="${isLastPage}" href="javascript:void(0);">下一页</a>
+					</li>
+				</ul>
+			</nav>
 		</div>
 	</div>
-
 </body>
 
 </html>
