--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -4,9 +4,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title></title>
-	<link rel="stylesheet" href="res/layui/css/layui.css" th:href="@{layui/css/layui.css}">
-	<link rel="stylesheet" href="res/css/global.css" th:href="@{css/global.css}">
-	<script src="res/layui/layui.js" th:src="@{layui/layui.js}"></script>
+	<link rel="stylesheet" href="res/layui/css/layui.css" th:href="@{/layui/css/layui.css}">
+	<link rel="stylesheet" href="res/css/global.css" th:href="@{/css/global.css}">
+	<script src="res/layui/layui.js" th:src="@{/layui/layui.js}"></script>
 	<style scoped>
 		.layui-container {
 			width: 33%;
