重新提交 弥补刘兆元的提交失误

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -176,7 +176,7 @@
 		<!--获取到登录的名字-->
 		<script>
             var name = $('#userName').html();
-			$('#everdaySummary').attr("href","/summary/add/"+name);
+			$('#everdaySummary').attr("href","/summary/addSummary/"+name);
 		</script>
 	</div>
 
