--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="keywords" content="">
   <meta name="description" content="">
-  <link rel="stylesheet" href="res/layui/css/layui.css" th:href="@{layui/css/layui.css}">
-  <link rel="stylesheet" href="res/css/global.css" th:href="@{css/global.css}">
-  <script src="res/layui/layui.js" th:src="@{layui/layui.js}"></script>
+  <link rel="stylesheet" href="res/layui/css/layui.css" th:href="@{/layui/css/layui.css}">
+  <link rel="stylesheet" href="res/css/global.css" th:href="@{/css/global.css}">
+  <script src="res/layui/layui.js" th:src="@{/layui/layui.js}"></script>
 </head>
 <body>
 
@@ -38,14 +38,14 @@
         </div>
        
         <div class="layui-form-item">
-          <button class="layui-btn" lay-filter="*" lay-submit>立即发布</button>
+          <button class="layui-btn" lay-filter="*" lay-submit="">立即发布</button>
         </div>
       </form>
     </div>
   </div>
 </div>
 
- <script type="text/javascript" charset="utf-8" src="res/js/kindeditor.js"></script>
+ <script type="text/javascript" charset="utf-8" src="res/js/kindeditor.js" th:src="@{/js/kindeditor.js}"></script>
   <script type="text/javascript">
     KE.show({
         id : 'content',
