--- a/src/main/resources/templates/personal.html
+++ b/src/main/resources/templates/personal.html
@@ -4,9 +4,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>个人中心</title>
-	<link rel="stylesheet" href="res/layui/css/bootstrap.min.css" th:href="@{layui/css/bootstrap.min.css}">
-	<link rel="stylesheet" href="res/layui/css/layui.css" th:href="@{layui/css/layui.css}">
-	<link rel="stylesheet" href="res/css/global.css" th:href="@{css/global.css}">
+	<link rel="stylesheet" href="res/layui/css/bootstrap.min.css" th:href="@{/layui/css/bootstrap.min.css}">
+	<link rel="stylesheet" href="res/layui/css/layui.css" th:href="@{/layui/css/layui.css}">
+	<link rel="stylesheet" href="res/css/global.css" th:href="@{/css/global.css}">
 
 	<style>
 		.list-group-item {
