--- a/src/main/resources/templates/head.html
+++ b/src/main/resources/templates/head.html
@@ -72,7 +72,7 @@
 				<!--登录后-->
 				<div class="loginend" sec:authorize="isAuthenticated()">
 					<!--?id='+2+'&currement='+1+'&pageSize='+1-->
-                    <a class="avataraa" href="#"target="_parent" id="everdaySummary">
+                    <a class="avataraa" href="#"target="_parent" id="everSummary">
                         <span class="avatar"></span>
 						<span style="color: #fff" sec:authentication="name" class="name" id="userName"></span>
 					</a>
@@ -80,7 +80,7 @@
                     <!--截取姓名的第一个字-->
                     <script>
                         var name = $('#userName').html();
-                        $('#everdaySummary').attr("href","/summary/personal/"+name);
+                        $('#everSummary').attr("href","/summary/personal/"+name);
 
 
                         var name = $('.name').html().substring(0,1);
