更改分页条件用username

--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -107,96 +107,24 @@
 		</div>
 
 		<div class="edge">
-			<dl class="fly-panel fly-list-one">
+			<dl class="fly-panel fly-list-one" >
 				<dt class="fly-panel-title">浏览最多</dt>
-				<dd>
-					<a href="">使用 layui 秒搭后台大布局（基本结构）</a>
-					<span>
-						<i class="iconfont">&#xe60b;</i> 6087</span>
+				<dd th:each="logHot:${LogByHot}">
+					<a th:text="${logHot.getTitle()}" th:href="'/summary/detail/'+${logHot.getId()}"></a>
+					<span >
+						<i class="iconfont">&#xe60b;</i><span th:text="${logHot.getHot()}"></span> </span>
 				</dd>
-				<dd>
-					<a href="">Java实现LayIM后端的核心代码</a>
-					<span>
-						<i class="iconfont">&#xe60b;</i>
-						767</span>
-				</dd>
-				<dd>
-					<a href="">使用 layui 秒搭后台大布局（基本结构）</a>
-					<span>
-						<i class="iconfont">&#xe60b;</i> 6087</span>
-				</dd>
-				<dd>
-					<a href="">Java实现LayIM后端的核心代码</a>
-					<span>
-						<i class="iconfont">&#xe60b;</i>
-						767</span>
-				</dd>
-				<dd>
-					<a href="">使用 layui 秒搭后台大布局（基本结构）</a>
-					<span>
-						<i class="iconfont">&#xe60b;</i> 6087</span>
-				</dd>
-				<dd>
-					<a href="">Java实现LayIM后端的核心代码</a>
-					<span>
-						<i class="iconfont">&#xe60b;</i>
-						767</span>
-				</dd>
-				<dd>
-					<a href="">使用 layui 秒搭后台大布局（基本结构）</a>
-					<span>
-						<i class="iconfont">&#xe60b;</i> 6087</span>
-				</dd>
-				<dd>
-					<a href="">Java实现LayIM后端的核心代码</a>
-					<span>
-						<i class="iconfont">&#xe60b;</i>
-						767</span>
-				</dd>
+
 			</dl>
 
 			<dl class="fly-panel fly-list-one">
 				<dt class="fly-panel-title">评论最多</dt>
-				<dd>
-					<a href="">使用 layui 秒搭后台大布局之基本结构</a>
-					<span>
-						<i class="iconfont">&#xe60c;</i> 96</span>
+				<dd th:each="logBaen:${LogBeans}">
+					<a th:text="${logBaen.getTitle()}" th:href="'/summary/detail/'+${logBaen.getLid()}"></a>
+					<span >
+						<i class="iconfont">&#xe60c;</i><span th:text="${logBaen.getCommentCount()}"></span> </span>
 				</dd>
-				<dd>
-					<a href="">使用 layui 秒搭后台大布局之基本结构</a>
-					<span>
-						<i class="iconfont">&#xe60c;</i> 96</span>
-				</dd>
-				<dd>
-					<a href="">使用 layui 秒搭后台大布局之基本结构</a>
-					<span>
-						<i class="iconfont">&#xe60c;</i> 96</span>
-				</dd>
-				<dd>
-					<a href="">使用 layui 秒搭后台大布局之基本结构</a>
-					<span>
-						<i class="iconfont">&#xe60c;</i> 96</span>
-				</dd>
-				<dd>
-					<a href="">使用 layui 秒搭后台大布局之基本结构</a>
-					<span>
-						<i class="iconfont">&#xe60c;</i> 96</span>
-				</dd>
-				<dd>
-					<a href="">使用 layui 秒搭后台大布局之基本结构</a>
-					<span>
-						<i class="iconfont">&#xe60c;</i> 96</span>
-				</dd>
-				<dd>
-					<a href="">使用 layui 秒搭后台大布局之基本结构</a>
-					<span>
-						<i class="iconfont">&#xe60c;</i> 96</span>
-				</dd>
-				<dd>
-					<a href="">使用 layui 秒搭后台大布局之基本结构</a>
-					<span>
-						<i class="iconfont">&#xe60c;</i> 96</span>
-				</dd>
+
 			</dl>
 		</div>
 	</div>
