--- a/src/main/resources/templates/head.html
+++ b/src/main/resources/templates/head.html
@@ -80,7 +80,7 @@
                     <!--截取姓名的第一个字-->
                     <script>
                         var name = $('#userName').html();
-                        $('#everSummary').attr("href","/summary/personal/"+name);
+                        $('#everSummary').attr("href","/summary/personal?username="+name);
 
 
                         var name = $('.name').html().substring(0,1);
