究极版!!!!首页分页以及条件查询分页各种分页完毕

--- a/src/main/resources/templates/head.html
+++ b/src/main/resources/templates/head.html
@@ -62,11 +62,11 @@
 
 	<div class="header" >
 		<div class="main">
-			<a class="title" href="/index" target="_parent">
+			<a class="title" href="/" target="_parent">
 				<i class="iconfont icon-jiaoliu layui-hide-xs" style="font-size: 22px;"></i>
 				吾日三省吾身</a>
 			<div class="nav">
-				<a class="nav-this" href="/index"></a>
+				<a class="nav-this" href="/"></a>
 			</div>
 			<div class="nav-user">
 				<!--登录后-->
