--- a/src/main/resources/templates/personal.html
+++ b/src/main/resources/templates/personal.html
@@ -9,6 +9,28 @@
 	<link rel="stylesheet" href="res/css/global.css" th:href="@{/css/global.css}">
 
 	<style>
+		.avataraa {
+			display: flex;
+			flex-direction: row;
+			justify-content: center;
+			align-items: center;
+
+		}
+
+		.avatar {
+			float: left;
+			display: block;
+			width: 50px;
+			height: 50px;
+			text-align: center;
+			line-height: 50px;
+			font-size: 20px;
+			border-radius: 50%;
+			color: #c2c2c2;
+			background-color: #2F4056;
+			margin-right: 15px;
+		}
+		
 		.list-group-item {
 			border: none;
 		}
