--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -16,6 +16,28 @@
             window.editor = k.creat("#kindeditor_id");
         })
     </script>
+  <style type="text/css" rel="stylesheet">
+    .avatar {
+      float: left;
+      display: block;
+      width: 50px;
+      height: 50px;
+      text-align: center;
+      line-height: 50px;
+      font-size: 20px;
+      border-radius: 50%;
+      color: #c2c2c2;
+      background-color: #2F4056;
+      margin-right: 15px;
+    }
+    .avataraa {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+
+    }
+  </style>
 </head>
 <body>
 
