--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -30,7 +30,7 @@
 				<div class="layui-tab layui-tab-brief" lay-filter="user">
 					<ul class="layui-tab-title">
 						<li>
-							<a href="login.html">登入</a>
+							<a href="login.html" th:href="@{/loginPage}">登入</a>
 						</li>
 						<li class="layui-this">注册</li>
 					</ul>
