究极版!!!!首页分页以及条件查询分页各种分页完毕

--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -37,6 +37,12 @@
 			background-color: #2F4056;
 			margin-right: 15px;
 		}
+		.avataraa {
+			display: flex;
+			flex-direction: row;
+			justify-content: center;
+			align-items: center;
+		}
 	</style>
 
 </head>
