--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -8,6 +8,25 @@
 	<link rel="stylesheet" href="res/css/global.css" th:href="@{/css/global.css}">
 	<script src="res/layui/layui.js" th:src="@{/layui/layui.js}"></script>
 	<style scoped>
+		.avatar {
+			float: left;
+			display: block;
+			width: 50px;
+			height: 50px;
+			text-align: center;
+			line-height: 50px;
+			font-size: 20px;
+			border-radius: 50%;
+			color: #c2c2c2;
+			background-color: #2F4056;
+			margin-right: 15px;
+		}
+		.avataraa {
+			display: flex;
+			flex-direction: row;
+			justify-content: center;
+			align-items: center;
+		}
 		.layui-container {
 			width: 33%;
 		}
